overlays/green/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: traffic-splitter
  namespace: duyaccel-dev
spec:
  selector:
    app: demo
  type: ClusterIP
  ports:
  - name: splitter
    protocol: TCP
    port: 80
    targetPort: main-port

---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: duyaccel-dev
spec:
  ingressClassName: haproxy
  rules:
  - host: kubernetes.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traffic-splitter
            port: 
              name: splitter
---
