overlays/green/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-route
spec:
  host: demo.apps.sandbox-m3.1530.p1.openshiftapps.com
  alternateBackends:
  - kind: Service
    name: demo-green-svc
    weight: 20
---
